<resources xmlns:tools="http://schemas.android.com/tools">
    <!--General-->
    <string name="app_name">UCE</string>
    <string name="title_activity_settings">Settings</string>
    <string name="progress_popup_progress">Progress</string>
    <string name="positive_button_text">Yes</string>
    <string name="negative_button_text">No</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_popup_title">Delete</string>
    <string name="zip_download_completed">Download completed, unpacking</string>
    <string name="zip_unpack_completed">Unpacking completed</string>
    <string name="zip_unpacking_failed">Unpacking failed</string>
    <string name="download_failed">Download failed</string>
...
    <string name="merged_pin_name">Choose a pin to open</string>

    <!--AllPins-->
    <string name="allpins_menuimage_description">Image for pins menu button</string>
    <string name="allpins_checkmark_description">Checkmark displaying if a pin is done</string>
    <string name="allpins_topbar_title">Pins</string>
    <string name="allpins_sorting_title_az">Title a-z</string>
    <string name="allpins_sorting_title_za">Title z-a</string>
    <string name="allpins_sorting_difficulty_easyhard">Difficulty easy-hard</string>
    <string name="allpins_sorting_difficulty_hardeasy">Difficulty hard-easy</string>
    <string name="allpins_sorting_type_az">Type a-z</string>
    <string name="allpins_sorting_type_za">Type z-a</string>
    <string name="allpins_sort_popup_title">Sort by:</string>
    <string name="allpins_sortbutton_description">Image button for sorting pins</string>

    <!--Pins-->
    <string name="pin_close">Close</string>
    <string name="pin_finish">Finish</string>
...
    <string name="pin_quiz_result_image_description">Image of mascot with emotion matching quiz result</string>
    <string name="pin_quiz_result_placeholder">QUIZRESULT</string>
    <string name="pin_quiz_complete_text_placeholder">CUSTOMTEXT</string>
    <string name="pin_quiz_reopen_button_success">See Answers</string>
    <string name="pin_quiz_reopen_button_fail">Try Again</string>
    <string name="pin_type_image_descripition">Image showing the type of the pin</string>
    <string name="pin_quiz_success_head">Quiz completed</string>
    <string name="pin_quiz_success_body" tools:ignore="PluralsCandidate">Congratulations! You completed the "%1$s" quiz with %2$d out of %3$d points.</string>
    <string name="pin_quiz_fail_head">Quiz failed!</string>
    <string name="pin_quiz_fail_body">Oh no… You did not get enough points to complete this quiz. Don\'t worry though, you can try again at any time.</string>
    <string name="pin_reward_text_placeholder">REWARD</string>
    <string name="pin_reward_string">+%1$d</string>
    <string name="pin_points_logo_description">Logo for points</string>
    <string name="pin_close_warning_head">Closing Pin</string>
    <string name="pin_close_warning_body">Are you sure you want to close pin? All progress will be lost.</string>
    <string name="pin_missing_answer_message">Some questions still lack answers</string>
    <string name="pin_image_title_placeholder">image title</string>

    <!--Fieldbook-->
    <string name="fieldbook_date_time_text"><![CDATA[Date & Time]]></string>
...
