<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/all_pins_toolbar"
        layout="@layout/menu_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/pins_searchbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/custom_border_search"
            android:drawableStart="@drawable/ic_sprite_search"
            android:ems="10"
            android:hint="@android:string/search_go"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColorHint="@color/HighBlue"
            app:layout_constraintBottom_toBottomOf="@+id/sortButton"
            app:layout_constraintEnd_toStartOf="@+id/sortButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sortButton" />

        <ImageView
            android:id="@+id/sortButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/allpins_sortbutton_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sprite_allpins_sortpins" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allpins_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_marginTop="15dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortButton"
            tools:listitem="@layout/allpins_recyclerview_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>