<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryDarkRef"
    android:gravity="center"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/completed_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/allpins_checkmark_description"
        app:layout_constraintBottom_toTopOf="@+id/sepparator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_sprite_complete" />

    <TextView
        android:id="@+id/popup_window_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="bottom|start"
        android:paddingStart="12dp"
        android:paddingTop="10dp"
        android:paddingEnd="12dp"
        android:paddingBottom="10dp"
        android:textColor="@color/TextGrey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/popup_window_edit_button"
        app:layout_constraintStart_toEndOf="@+id/completed_marker"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/popup_window_edit_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:visibility="invisible"
        android:clickable="false"
        android:background="@drawable/custom_border_button"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/fieldbook_edit_content_button"
        android:textAllCaps="false"
        android:textColor="@color/TextDarkGrey"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/popup_window_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/sepparator"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:background="@color/Flirtatious"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popup_window_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_window_title">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_border"
            app:layout_constraintBottom_toTopOf="@+id/popup_window_close_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/scrollLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <Button
            android:id="@+id/popup_window_close_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_border_button"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/pin_close"
            android:textAllCaps="false"
            android:textColor="@color/TextDarkGrey"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>